smten/share/lib/Smten/Tests/ShouldFail/BadType3.smtn

module Smten.Tests.ShouldFail.BadType3 where

-- The 'Just a b' pattern has too many arguments.
foo :: Maybe Bool -> Bool
foo m =
  case m of
    Just a b -> a && b
    _ -> False

